# davis-hack-26

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  runs.py  schemas.py
backend/app/agent/: __init__.py  adk_orchestrator.py  claude_agent.py  er_policy.py  prompts.py  tools.py
backend/app/api/: routes_anomaly.py  routes_approval.py  routes_execute.py  routes_health.py  routes_metrics.py  routes_plan.py  routes_risk.py  routes_runs.py  routes_sim.py
backend/app/data/: eval_scenes.json  field_grid.json
backend/app/domain/: __init__.py  anomaly_engine.py  metrics.py  risk_engine.py  work_order.py
backend/app/domain/packs/: __init__.py  irrigation.py
backend/app/sim/: __init__.py  drone_adapter.py  frame_grabber.py  robot_adapter.py  safety.py
backend/app/vision/: __init__.py  ensemble_vlm.py  gemini_er.py  mock_vlm.py  ollama_gemma.py  vlm_client.py
backend/scripts/: check_keys.py  e2e_demo.py  generate_eval_dataset.py  smoke_test_drone.py  smoke_test_ensemble.py  smoke_test_gemini.py  smoke_test_ollama.py  smoke_test_robot.py
backend/tests/: test_anomaly_engine.py  test_belief_evolution.py  test_demo_motion_budgets.py  test_er_policy_loop.py  test_safety.py
data_pipeline/: README.md  __init__.py  alerts.py  chip.py  classify_gemma.py  ingest.py  ndvi.py  pipeline.py  requirements.txt
drone-sim-main/: .gitignore  26 READ ME.md  GETTING_STARTED.md  HACKATHON.md  HACKER_GUIDE.md  README.md  agl-ceiling.js  all_forests.txt  all_forests_v2.txt  api-bridge.py  index.html  (+14 more)
(+105 files in other folders)
