[project]
name = "agriscout-backend"
version = "0.1.0"
description = "AgriScout AI backend — agentic field-triage over DAC drone + robot sims."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "sse-starlette>=2.1.3",
    "numpy>=2.1.0",
    # --- Primary brain: Google ADK + Gemini 2.5 Pro / Robotics-ER 1.6 ---
    "google-adk>=0.4.0",
    "google-genai>=0.3.0",
    # --- Fallback brain: Anthropic Messages API (retained while ADK preview stabilises) ---
    "anthropic>=0.39.0",
    "Pillow>=10.4.0",
    "anyio>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
